lang/checker/tests/cases/pass/call-expression/return_type.slt
local cool = function(value: string) -> number
	return 0
end
local no: number = cool("a")
